# actor_agent

./: .gitignore  Cargo.toml
MyAutoAgent/: Cargo.toml
MyAutoAgent/src/: main copy.rs  main.rs  mcp_server.rs  tools_issue.txt
MyAutoAgent/src/math_agent/: agent.rs  tool.rs
src/: first_agent.rs  main.rs  warmup_ollama.rs
