[package]
name = "MyAutoAgent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
autoagents = { version = "0.3.0", features = ["ollama"] }
autoagents-derive = "0.3.0"
autoagents-toolkit = { version = "0.3.0", features = ["filesystem", "search"] }
dotenv_rs = "0.16.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"
